--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/x-icon" href="images/verse-card-bg.png">
-    <title>Bhagavad Geeta</title>
+    <link rel="icon" type="image/x-icon" href="images/favicon.png">
+    <title>🕉️ श्रीमद्भगवद्गीता 🕉️</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 
@@ -49,9 +49,32 @@
                 </div>
             </div>
         </div>
+
+        <!-- After stats-section inside .container -->
+
+        <div class="image-gallery ">
+            <h2>Divine Illustrations</h2>
+            <div class="gallery-grid ">
+                <div class="gallery-item">
+                    <img src="images/profile3.jpg" alt="Krishna Image 3">
+                </div>
+                <div class="gallery-item">
+                    <img src="images/profile7.jpg" alt="Krishna Image 5">
+                </div>
+                <div class="gallery-item">
+                    <img src="images/profile2.jpg" alt="Krishna Image 2">
+                </div>
+                <div class="gallery-item">
+                    <img src="images/profile4.jpg" alt="Krishna Image 4">
+                </div>
+            </div>
+        </div>
     </div>
 
-
+    <div class="container footer">
+        <p>© 2025 Bhagavad Gita. All rights reserved.</p>
+        <p>Made with ❤️ by <a href=" https://github.com/jitendravermaer">Jitendra Verma</a></p>
+    </div>
     <script src="script.js"></script>
 </body>
 
